src/pages/learn/Mission.module.css
@media screen and (min-width: 600px) {
  .missiontout {
    display: grid;
    grid-template-columns: 0.5fr 1fr;
    grid-template-rows: 350px 1fr;
    grid-column-gap: 30px;
    grid-row-gap: 30px;
  }
}

.card {
  grid-area: 1 / 1 / 2 / 2;
  height: 100%;
  width: 100%;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: inset 2px 3px 10px 0 rgba(0, 0, 0, 0.5);
  border: 1px solid #b98941;
}

@media screen and (max-width: 600px) {
  .card {
    height: 250px;
    margin-bottom: 10px;
  }
}

.missionblurb {
  grid-area: 1 / 2 / 2 / 3;
  width: 100%;
  height: auto;
}

.missionblurb ul {
  list-style: none;
  padding-left: 0;
}

@media screen and (max-width: 600px) {
  .missionblurb ul {
    margin-bottom: 30px;
  }
}

.missionblurb li:before {
  content: '\2726';
  margin-right: 10px;
  color: #b98941d1;
}

.missiondescription {
  grid-area: 2 / 1 / 3 / 3;
}

.missiondescriptioninstructor {
  margin-bottom: 15px;
}

.instructor {
  font-size: 22px;
  color: #f6dbb2;
}

.learn {
  text-transform: uppercase;
  letter-spacing: 0.05em;
}

